--- a/index.html
+++ b/index.html
@@ -81,43 +81,23 @@
         <section class="card" data-title="1. Общая информация" id="about">
           <div class="hd"><h2>1. Общая информация</h2><span class="pill">Раздел форума: Основные положения</span></div>
           <div class="bd">
-            <p><b>Pineville Police Department (PPD)</b> — правоохранительный орган города Пайнвиль, обеспечивающий защиту жизни, прав и собственности граждан. Лор <i>Gray Days S1 — «Просто Бизнес»</i>, место действия: 2004 год, Пайнвиль, штат Оклахома.</p>
+            <p><b>Pineville Police Department (PPD)</b> — правоохранительный орган города Пайнвиль, обеспечивающий защиту жизни, прав и собственности граждан. Пайнвиль, штат Оклахома.</p>
             <div class="cols">
               <div>
-                <p><b>История:</b> основан в 1933 г. с задачей охраны почтовых грузов и контроля дорожной обстановки на узле <i>Alpha Road</i> и <i>79 Highway</i>. К 2004 г. — противодействие ОПГ <b>DeSpiff</b>, рост коррупции и криминала.</p>
+                <p><b>История:</b> основан в 1933 г. с задачей охраны почтовых грузов и контроля дорожной обстановки. К 2004 г. — противодействие ОПГ <b>DeSpiff</b>, рост коррупции и криминала.</p>
                 <p><b>Миссия:</b> служить обществу, снижать преступность, пресекать оборот наркотиков и нелегального оружия, контролировать ключевые магистрали.</p>
               </div>
               <div>
                 <p><b>Девиз:</b> <i>“To Serve and Protect”</i></p>
-                <p><b>Ключевые угрозы:</b> организованная преступность (<b>DeSpiff</b>), наркотрафик, контрабанда оружия, коррупция, уличные банды (район <i>Liberty Street</i>).</p>
+                <p><b>Ключевые угрозы:</b> организованная преступность (<b>DeSpiff</b>), наркотрафик, контрабанда оружия, коррупция, уличные банды (район <i>Green Street</i>).</p>
                 <p class="muted">Логика → Далее: где мы работаем? См. «2. Территория ответственности».</p>
               </div>
             </div>
           </div>
         </section>
 
-        <!-- 2. Территория -->
-        <section class="card" data-title="2. Территория ответственности" id="area">
-          <div class="hd"><h2>2. Территория ответственности</h2><span class="pill">Форум: Основные положения</span></div>
-          <div class="bd">
-            <p>Городской сектор и транспортные артерии для распределения патрулей и приоритизации вызовов.</p>
-            <table class="table">
-              <thead><tr><th>Улица / Зона</th><th>Характеристика</th><th>Приоритет</th></tr></thead>
-              <tbody>
-                <tr><td>Main Street</td><td>Центр, торговля, мэрия</td><td>Средний</td></tr>
-                <tr><td>Residential Street</td><td>Жилой сектор, бытовые вызовы</td><td>Средний</td></tr>
-                <tr><td>79 Highway</td><td>Трасса, контрабанда, курьеры</td><td>Высокий</td></tr>
-                <tr><td>Liberty Street / 1–3</td><td>Активность банд, ограбления</td><td><b style="color:var(--warn)">Высокий</b></td></tr>
-                <tr><td>Quiet Street</td><td>Ночные выстрелы, закладки</td><td>Высокий (ночь)</td></tr>
-                <tr><td>Main Avenue</td><td>Банки, гос.здания, митинги</td><td>Переменный</td></tr>
-                <tr><td>Middle Street</td><td>Вандализм, драки</td><td>Средний</td></tr>
-              </tbody>
-            </table>
-            <p class="muted">Логика → Для координации по зонам нужны единые радиокоды. См. «3. Радиокоды».</p>
-          </div>
-        </section>
-
-        <!-- 3. Радиокоды -->
+       
+        <!-- 2. Радиокоды -->
         <section class="card" data-title="3. Радиокоды (Ten‑Codes)" id="ten">
           <div class="hd"><h2>3. Радиокоды (Ten‑Codes)</h2><span class="pill">Форум: Радиокоды</span></div>
           <div class="bd">
@@ -604,3 +584,4 @@ Miranda: да/нет  Изъято: ______
   </script>
 </body>
 </html>
+
